--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 	<!--
 	Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
 	-->
-	<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBjRKSfOahhIT2WkriHl69iJTj8CcPoOmM"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBjRKSfOahhIT2WkriHl69iJTj8CcPoOmM"></script>
 
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
